--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -27,7 +27,7 @@ The most famous example of a revitalised language is Hebrew, with a speaking pop
 
 While on the subject of Hebrew, it is worth mentioning that the initial efforts to revitalise it were often maligned by both Jewish communities and linguists, for a variety of reasons. First, the Jewish faith had traditionally viewed Hebrew as a holy tongue, and many religiously conservative Jews objected to the sacrilegious use of it for day-to-day matters, preferring Aramaic or Yiddish. Many also objected on the grounds that its use was connected to Zionism (why is well beyond the scope of this thesis). But most pertinently, linguists objected because they viewed revitalisation as an impossibility. If the language was dead, than it would be impossible to accurately bring it back, as literary texts are not sufficient at adequately capturing all of the intricacies of a language and how it is used. Clearly, with millions of first language speakers, this is no longer a valid point; these critics can now claim that modern Hebrew is an imperfect descendant of historical Hebrew, which remains extinct, and they are likely right to do so. Revitalisation is not always an ethically or logistically clear process.
 
-This is especially true for \textit{constructed} languages, which are \textit{a priori} languages invented by a linguist or a community without a historical speaking community or lineage. These may be created to be logically resistant to ambiguity (such as Loglan or Lobjan \citep{okrent2009land}), for a specific artistic purpose (such as Na'vi or Klingon, meant to be spoken by aliens in science fiction \citep{schreyer2015digital, schreyer2011media}), for scientific study (such as those used by evolutionary linguists for language games with participants to discern how language might have evolved \citep{scott2010language}, or such as used in the ubiquitous Wug test by scholars of language acquisition \citep{ratner2000beginning}) or for political aims (such as Esperanto or Ido \citep{okrent2009land}). Some of these may end up with thousands of speakers, including native speakers, and a huge surplus of computational resources. Na'vi has a dictionary that has been translated using computational tooling into over a dozen languages, for instance, and morphological parser, spell checkers, and a Facebook translator. These languages are not normally considered as revitalised or dormant, but are instead mostly ignored by the scientific community altogether.
+This is especially true for \textit{constructed} languages, which are \textit{a priori} languages invented by a linguist or a community without a historical speaking community or lineage. These may be created to be logically resistant to ambiguity (such as Loglan or Lobjan \citep{okrent2009land}), for a specific artistic purpose (such as Na'vi or Klingon, meant to be spoken by aliens in science fiction \citep{schreyer2015digital, schreyer2011media}), for scientific study (such as those used by evolutionary linguists for language games with participants to discern how language might have evolved \citep{scott2010language}, or such as used in the ubiquitous Wug test by scholars of language acquisition \citep{ratner2000beginning}) or for political aims (such as Esperanto or Ido \citep{okrent2009land}). Some of these may end up with thousands of speakers, including native speakers, and a huge surplus of computational resources. Na'vi has a dictionary that has been translated using computational tooling into over a dozen languages, for instance, and morphological parser, spell checkers, and a Facebook translator. These languages are not normally considered as revitalised or dormant, but are instead mostly ignored or actively excluded (see \citet{gibson2016assessing} for an example of this) by the scientific community altogether.
 
 Heading back to natural languages, Latin would largely not be considered a revitalised language either, although there are immersion schools and some daily usage by the Catholic liturgy. These domains are specific and do not extend into normal life, on the whole. This doesn't mean it doesn't have some computational resources, however - the ATMs in the Vatican use Latin as a user interface language.\footnote{\href{https://gizmodo.com/5905595/the-atms-in-vatican-city-speak-latin}{https://gizmodo.com/5905595/the-atms-in-vatican-city-speak-latin}} Old Swedish, likewise, has some computational resources (admittedly, from a single research group that is humorously aware of the lack of general global interest in the field).\footnote{\href{https://spraakbanken.gu.se/swe/forskning/diabase}{https://spraakbanken.gu.se/swe/forskning/diabase}} Latin would normally be considered a \textit{historic} language, like Ancient Greek or Old English. All of these languages, while extinct themselves, have direct descendants (the Romance languages, modern Greek, and English, respectively), but this is not always the case.
 
@@ -77,7 +77,7 @@ Language health or vitality is a topic of increasing scholarship and interest. S
 
 It is perhaps unsurprising that there are various metrics which can be used to classify the health of a language and its community. In this section, I'll explain these metrics in detail, focusing on the GIDS, EGIDS, UNESCO, and LEI measurements, as suggested by \citet{yang2017toward} as the main players in the field.
 
-\subsubsection{GIDS}
+\subsubsection{The Graded Intergenerational Disruption Scale (GIDS)}
 
 The Graded Intergenerational Disruption Scale, developed by \citet{fishman1991reversing}, is the earliest and most well known of the scales. It rates languages based on their domains of use, and on the amount of passing on and education which continues to the next generation through the parents. Figure~\ref{fig:gids} summarizes the different stages. Generally, as a language progresses and becomes more imperilled, it ends up further down the list. As a language ceases to be used in one domain, it becomes less likely that it will in the future, and more likely that parents will consider the language to be less useful than another. Over time, this causes the language to lose speakers (although the process is not inevitable; for examples, language policy in Quebec helped secure and revitalise the language over the past half century \citep{bourhis2001reversing}).
 
@@ -111,9 +111,9 @@ Importantly, UNESCO clarifies that it does not suggest using one metric over ano
  \label{fig:unesco}
 \end{figure}
 
-The UNESCO ratings for languages are listed in the \textit{UNESCO Atlas of the World?s Languages in Danger} \citep{unesco2014unesco}.
+The UNESCO ratings for languages are listed in the \textit{UNESCO Atlas of the World's Languages in Danger} \citep{unesco2014unesco}.
 
-\subsubsection{EGIDS}
+\subsubsection{The Extended GIDS (EGIDS)}
 
 Lewis and Simons, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}.}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating \citep{lewis2010assessing}. First, the levels are static, and don't account for directionality on the part of a language community up or down the strata. Second, there are language types which aren't included - for instance, there isn't a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this isn't accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
 
@@ -187,61 +187,93 @@ Some things can be done, however. Terminologically, 'low-resource' is intentiona
 
 \subsection{Digital presence}
 
+% I'll describe his assessment here, and explain why an alternative assessment would also be good. For instance, Wikipedia is, in my opinion, not a good judge of a language's health, as it is a closed ecosystem with diminishing returns for users who are bilingual.
+
 Digital presence, briefly alluded to previously, can be thought of as the amount of language data available through digital sources. A looser definition could be 'the amount of written text on the web', but this would miss out on several important considerations. First, linguistic data does not have to be written to be digitally encoded; videos and audio data are both examples of digital content which is often digitally encoded. In some cases, pictures are also relevant, especially for signed languages or for examples of written text, such as in the millions of scans of papyrus from the Egyptian city of Oxyrhynchus, which are being translated using a crowd-sourced system by thousands of volunteers \citep{williams2014computational}, or for other language mediums, such as the khipu knot system used by the pre-Columbian Incan civilisation \citep{quilter2002narrative}. Secondly, the web (hereafter meant to refer to the World Wide Web) is not the only corpus of knowledge, nor is it the only network through which data can be accessed. Trivial example of other corpuses would be local files collected by individual field researchers that are backed up on hard drives; a similar example of another network would be a local area network in offline areas, or a university intranet. 
 
-However, digital presence can best be thought of schematically as a new domain for language use, and it is overwhelmingly today represented on the web. Ten years ago, it was fashionable to include references to the web "as a a corpus" (as \citet{scannell2007crubadan}, for instance, cited \citep{resnik1999mining, ghani2001mining, kilgarriff2001web}, although the latter two were in reference to low-resource languages); today, it is more common to cite studies on digital natives such as the 20,000 citation-strong \citet{prensky2001digital} paper\footnote{This number is from Google Scholar (\href{https://scholar.google.com}{https://scholar.google.com}) accessed April 9, 2018.}, or to assume that the web, and occasionally phone networks, are the main locations for digital communication.
+However, the digital sphere can best be thought of schematically as a new domain for language use, and it is overwhelmingly today represented on the web. Ten years ago, it was fashionable to include references to the web "as a a corpus" (as \citet{scannell2007crubadan}, for instance, cited \citep{resnik1999mining, ghani2001mining, kilgarriff2001web}, although the latter two were in reference to low-resource languages); today, it is more common to cite studies on digital natives such as the 20,000 citation-strong \citet{prensky2001digital} paper\footnote{This number is from Google Scholar (\href{https://scholar.google.com}{https://scholar.google.com}) accessed April 9, 2018.}, or to assume that the web, and occasionally phone networks, are the main locations for digital communication. The web is ubiquitous; not only are more than half of the global population connected to the internet\footnote{\href{https://www.internetworldstats.com/stats.htm}{https://www.internetworldstats.com/stats.htm}}, but the internet, in developed countries, is used for all levels of communication, such as education, work, mass media, and in the home and local communities. Digital presence, then, is functionally the amount of usage on the web.
 
+There are several large resources which can be used to judge the amount of corpora for a language on the web, outside of papers defining metrics to judge these languages and to state whether they are endangered or thriving. The main resource for low resource languages is almost certainly the Cr\'ubad\'an project, developed by \citet{scannell2007crubadan}.\footnote{\href{http://crubadan.org/}{http://crubadan.org/}} This is a massive crawler which looks for documents with trigram frequencies for particular languages by checking against a seed corpus for under-resourced languages developed from Wikipedia, the Jehovah's Witness translations, and translations of the UN Declaration of Human Rights (UNHR). It is (to this author's knowledge) often the only corpus for a low resource language on the web, as is the case with Naskapi (see Section~\ref{sec:naskapi}). 
 
+Often, a translated Bible is the next best place to look for digital content. Biblical translations are so common as a first resource that there is a body of research that uses partial or full translations of the Bible for training NLP systems as a result \citep{chew2006evaluation}. However, finding the bible or UNHR is often difficult. In these cases, it is best to look for aggregators of data. There are a non-trivial number of large organisations and databases where it is possible to find resources - dictionaries, references, and occasionally software - on low resource languages. 
 
-% A better lower bound might be the existence of a Bible. The Bible is often the first thing translated into a language, and there is a body of research that uses partial or full translations of the Bible for training NLP systems as a result \citep{chew2006evaluation, }.
+\begin{itemize}
 
-In this section, I am going to explain what digital presence is. This is more than just defining language vitality - instead, this is about how do we quantify a language's existence digitally, either on the web or offline in archives.
+\item The Endangered Languages Project (ELP), described above and in \citet{lee2016assessing} and online\footnote{\href{http://www.endangeredlanguages.com/}{http://www.endangeredlanguages.com/}} has information on many under resourced languages. 
 
-Few of the metrics above take into account the level of digital literacy for a language. The possibility for a language to digitally ascend has been held up as a key component of judging a language's vitality by \citet{kornai2013digital}. %Reword wow
-% Describe Kornai
-%% Watch this video http://videolectures.net/metaforum2012_kornai_language/
+\item Ethnologue, which is both a book \citep{lewis2009ethnologue} and an online resource\footnote{\href{https://www.ethnologue.com/}{https://www.ethnologue.com/}}, is the most comprehensive resource on the world's languages, but which has proprietary paywalls for repeated access to content. It is published by SIL International, an evangelical Christian non-profit organisation. Many SIL entries for specific languages include academic references.
 
-%% Mention https://hlt.bme.hu/en/dld/
+\item Glottolog\footnote{\href{http://glottolog.org/}{http://glottolog.org/}} is an open source alternative to Ethnologue, developed at the Max Planck Institute for Evolutionary Anthropology. It has over 180,000 references, with information on over eight thousand languages. \citep{hammarstrom2015glottolog}
 
-I'll describe his assessment here, and explain why an alternative assessment would also be good. For instance, Wikipedia is, in my opinion, not a good judge of a language's health, as it is a closed ecosystem with diminishing returns for users who are bilingual.
+\item Omniglot, "the online encyclopaedia of writing systems and languages",\footnote{\href{http://omniglot.com}{http://omniglot.com}}, contains around writing information for around a thousand languages. \citep{ager2008omniglot}
+
+\item The Online Database of Interlinear Text (ODIN)\footnote{\href{http://odin.linguistlist.org}{http://odin.linguistlist.org}} is a multilingual repository of annotated language data for 1274 languages\footnote{Noted as of January 13, 2010; Accessed April 17, 2018. \href{http://odin.linguistlist.org}{http://odin.linguistlist.org}}. The database is formed by crawling scholarly articles on the web and looking for interlinear glossed text (IGT), an industry standard for displaying corpora in academic linguistics by displaying the original datum, a morphosyntactic gloss, and a translation. These data are not massive, but they are useful in particular for training algorithms on structured data. As well, "ODIN was developed as part of the greater effort within the GOLD Community of Practice \citep{farrar2007gold} and the Electronic Metastructure for Endangered Languages Data efforts (EMELD)\footnote{\href{http://emeld.org/}{http://emeld.org/} and \citet{farrar2002common}}, whose goals are to promote best practice standards and software, specifically those that facilitate interoperation over disparate sets of linguistic data." \citep{lewis2010developing} 
+
+\item The Open Language Archives Community (OLAC), a worldwide virtual library of language resources \citep{simons2003open}.\footnote{\href{http://www.language-archives.org/}{http://www.language-archives.org/}}
+
+\item Wikipedia\footnote{\href{https://www.wikipedia.org/}{https://www.wikipedia.org/}}, "the largest and most popular general reference work on the Internet" \citep{wiki:Wikipedia} has a nontrivial amount of articles on low-resource languages, many of which have references themselves to Scholarly work. \citep{kornai2013digital}, among others, notes that Wikipedia is one of the first ports-of-call for new language communities, and while it is not a precondition for having corpora on the web, it is a {\it sine qua non} for digital vitalisation. Thus Wikipedia has two purposes; documenting the language and its community (for instance, in the Naskapi Language article\footnote{\href{https://en.wikipedia.org/wiki/Naskapi\_language}{https://en.wikipedia.org/wiki/Naskapi\_language}}), and providing a space for corpus development in the target language itself.
+
+\item The World Atlas of Language Structures (WALS) is a directory typological features which also includes academic references for many of the over two thousand languages presented. WALS is a curated resource, largely made by a team of 55 experts, and hosted by the Max Planck Institute for Evolutionary Anthropology (the same as Glottlog). \citep{wals}
+
+% are the LREMap ([2], [17]), the CLARIN Virtual Lan- guage Observatory 16, the catalogues of Linguistic Data Consortium17, ELRA18 and META-SHARE19. From soria 2017
+
+\end{itemize}
+
+However, these resources are not set up to judge whether a language has digital content, and do not apply metrics towards digital presence. 
+
+\citet{kornai2013digital} outlined the first major metric for describing digital presence for a language. These metrics are needed because digital linguistic data is decoupled from speakers (it can survive beyond them), and because the digital domain is only one of a variety of domains for language usage. He divided languages into four possible categories: {\it Thriving}, {\it Vital}, {\it Heritage}, and {\it Still}. These can be thought of as a gradient, with digital ascent being the process of a language moving up the scale. Only 16 languages would be considered Thriving, all of which would be rated at 1 or higher on the EGIDs scale. Vital languages are those which may be in danger in the next hundred years, or show few signs of digital ascent - but they have a large population of speakers and at least some resources, such as a Bible or the UNHR; Heritage languages are dead or historic languages such as Latin which have large online presences that do not relate directly to a living language community; and Still languages show little to no presence on the web at all (although note that this does not mean that they endangered or moribund outside of the web.)
+
+Kornai looks at five confluent factors; demographics, prestige, the identity function of the language, the level of software support, and Wikipedia presence for a language. Demographics and community size can be gathered by doing a quantitative analysis of all public data available in a language on the web, and by using this data size as a proxy for the amount of speakers of a language using the digital space. This has obvious limits, which Kornai points out, in that the data may not accurately reflect the amount of users, in that it is limited to public data accessible by researchers, and in that it doesn't give an accurate representation of passive consumption of multilingual data. It would be worth adding that this also doesn't give an accurate count of multilingual usage of a language. Prestige is an obvious factor for digital ascent; when a language community views one language more highly than another, it is more likely to create digital content in one than the other, regardless of social policies and to some extent speaker populations. Identity function relates largely to certain historical languages, like Latin and Classical Chinese, which have large corpora online but should not be considered in the same grouping as more vibrant, living languages. 
+
+Software support as a factor in digital presence could be identified with a variety of different metrics. Kornai lists various stages for a language on the road of digital ascent. First, localisation of internalisation (often expressed using the shorthand l10n or i18n, where the numbers refer to the length of the words) of the language script is the major milestone that separates languages which are ascending from still languages. While many scripts use the more common Roman, CJK, Cyrllic, or Arabic alphabets, there are hundreds which do not, and these languages have specific Unicode considerations which need to be met for the language to be used adequately. The next step would be word-level tools, such as dictionaries, stemmers, and spellcheckers - all of which depend, at some point, on standardisation (but not s13n) of the language. Finally, sentence level tools such as automatic translators can be used. Regarding support, the question of a language's status is straightforward: is there language support for an operating system provided by Apple or Microsoft? If so, then it is likely that the language is thriving or vital. If not, there is almost zero chance of it being so. Kornai also used the Cr\'ubad\'an Project, UHDR and biblical presence, and presence on Omniglot and OLAC.
+
+Ultimately, Kornai found that the best indicator of a language's digital presence was their EGIDS rating. "The next best set of features indicated the quality of the wikipedia, followed by the number of L1 speakers, the size of the Cr\'ubad\'an crawl, the existence of FLOSS spellcheckers, and the number of online texts listed in OLAC." \citep[6]{kornai2013digital} Overall, only 5\% of the world's languages were seen as digitally ascending; like most results from this field, an increasingly dire statistic. As \citep[10]{kornai2013digital} writes:
+
+\begin{quote}
+Unfortunately, at a practical level heritage projects (including wikipedia incubators) are haphazard, with no systematic programs of documentation. Resources are often squandered, both in the EU and outside, on feel-good revitalization efforts that make no sense in light of the preexisting functional loss and economic incentives that work against language diversity \citep{ginsburgh2011many}. 
+\end{quote}
+
+However, others have noted that Kornai may have been early in his predictions that most languages will not digitally ascend \citep{gibson2016assessing}.
+
+In a follow-up paper, \citep{kornai2015new} proposed adding a single number scale to assess digital ascent: "For the assessment we propose a simple log-linear formula that derives a single number {\emph D} (digital vitality index) as a weighted sum of well-understood components such as the EGIDS ranking, (log) number of L1 speakers, (log) size of wikipedia, adjusted for quality, (log) crawl size, the existence of FLOSS spellcheckers, etc." The EGIDS ranking was considered objective, given that SIL linguists are generally interested in longer term work with communities as opposed to relatively short-lived or quantitative studies done by computational linguists. For digital vitalisation, he succinctly proposes working on a pyramid approach: first build a corpus with active and engaged speakers, then l10n and i18n support; then word-level tooling; phrase and sentence level tooling; and finally speech and character recognition and machine translation. 
+
+\citet{gibson2016assessing} extends Kornai by adding two separate statuses for languages - that of {\it Emergent} and {\it Latent}. Emergent languages are those where there is data, but it is privately hidden in messaging applications or cellphone usage, and unlikely to be accessible by the crawlers and corpora agglomeration tools used in \citet{kornai2013digital}. These would be identified by researchers in the field, and do not need to have locale or i18n setups before inception. Gibson cites Arabizi (as noted by \citet{darwish2013arabizi}), where numbers are used for sounds not present in standard Arabic, as an example; another might be the use of a forward slash to denote accents in early Irish Gaelic forums, as noted by \citet{scannell2007crubadan}. Latent languages are languages which meet the following criteria: "stable intergenerational transmission of the language, an available model of writing the language, the availability of appropriate technology and infrastructure (internet, mobile phone coverage), fonts in which to write the language in the desired script, and communal desire to see the language used digitally." If all of these are met, then the language could ascend beyond still into vital. Such languages would be admittedly impossible to find by measurements, but this category would be helpful for linguists working in the field to determine how to best work with the language community to help bootstrap language development. Gibson also redefined {\it Still}, which \citet{kornai2013digital} had marked as languages which are 'unable' to ascend, while here they are merely 'unlikely'. 
+
+A more recent metric was also introduced by \citet{soria2017digital}, for the purposes of helping digital language planning for the EU, as part of the Digital Language Diversity Project \footnote{\href{http://www.dldp.eu/content/reports-digital-language-diversity-europe}{http://www.dldp.eu/content/reports-digital-language-diversity-europe}}. Their scale has the following states: {\it Pre-digital}, {\it Dormant}, {\it Emergent}, {\it Developing}, {\it Vital}, and {\it Thriving}. Like Gibson, they exclude Kornai's {\it Heritage} status (oddly noting that Gibson also included it, which he hadn't for the same grounds), without sufficient explanation as to why dead languages are not relevant when there are communities based around them, some of which are communities with thousands of L2 speakers. (NOTE: Write a paper about this. TODO: Remove this comment after review from Alexis). Dormant would be equitable to Latent, while Pre-digital would apply to languages without internet or cell connectivity for the speaking population. Emergent through Thriving are largely matters of scale. While Kornai used proxies for the five factors he mentioned, Soria et al. note that such factors are difficult to quantify; they remedy this by focusing on three indicators: "a group pertaining to a language digital {\it capacity} [sic], a group related to a language digital {\it presence and use}, and a group related to a language digital {\it performance}." \citep[5]{soria2017digital} An example of how these are used can be seen in Figure~\ref{fig:dldp}.
+
+\begin{figure}
+ \centering
+ \includegraphics[width=.8\textwidth]{img/dldp.png}
+ \caption{Indicators of digital vitality \citep[6]{soria2017digital}}
+ \label{fig:gids}
+\end{figure}
+
+Soria et al. go into depth about each of these factors. As an example, for localised software, they propose the following scale in Table~\ref{table:dldp-software}:
+
+\begin{table}
+\begin{center}
+\begin{tabular}{|p{2cm}|p{1cm}|p{10cm}|} \hline
+Label & Grade & Localised software \\ \hline
+none & 2 & Neither operating system nor general purpose soft- ware localised in the language\\ 
+limited & 3 & At least one operating system (either desktop or mo- bile, either open or commercial) localised in the language \\
+medium & 4 & At least one desktop and one mobile operating system (either open or commercial) + some general purpose software (a word processor and a browser) localised in the language\\
+strong & 5 & Most used operating systems and general purpose software localised in the language; some specific purpose application software localised.\\
+advanced & 6 & Main operating systems and application software localised in the language.  \\ \hline
+\end{tabular}
+\end{center}
+\caption{Scale for Localised Software}
+\label{table:dldp-software}
+\end{table}
+
+They explain, for each scale, how to find information - for instance, they suggest asking local researchers and community members about the usage of "Windows, Mac OS X, Linux, Android, iOS, Microsoft Office, LibreOffice, Firefox, Chrome, Internet Explorer, Thunderbird, Adobe Creative Suite, Gimp" for judging localised software. However, they do not show metrics on any languages judged according to this scale, and they don't make it clear whether or not the different metrics ought to be summed to come up with a single number (an issue which \citet{lee2016assessing} raised with the UNESCO rating). In conclusion, while this is an interesting and in-depth metric, its wider applicability is not clear. 
+
+Each of these metrics suffers from growing pains. For instance, there is no metric as of yet which ranks English in it's own category - something which was seen as a large enough issue to cause the EGIDS authors to add another 0 ranking for supranational languages. (TODO: Write a paper on this) As well, there hasn't been an integrated approach looking at quantitative and qualitative measurements together. The most substantial work on this has been Kornai's team, which has worked with funding from SIL International on a Digital Language Vitality database\footnote{\href{https://hlt.bme.hu/en/projects/lingvit}{https://hlt.bme.hu/en/projects/lingvit}}. However, the future for this work as, at this moment, unclear (Kornai in personal communications, 2018). 
+
+% There's no higher scale - what separates English from French?
+% What about coding _in_ a language? How many languages have native computer languages? 
 
 % Talk about BLARK
 % Describe a new metric using BLARK to judge the rate of a language's life
-
-
-% Would be good to be able to cite something here. Otherwise it is original research.
-% \begin{itemize}
-% \item It is spoken by living fluent speakers, including second-language learners.
-% \item It is spoken by living, first-language learners.
-% \item It is productive in its morphology, growing in vocabulary, and not frozen in time.
-% \item It is recorded in some form, including audio files.
-% \item It has a writing system.
-% \item It has a writing system that is used by modern speakers to record their own language.
-% \item It has a writing system that can be used on a computer.
-% \item The electronic writing system does not require excessive installation.
-% \item All normal characters are available in Unicode.
-% \item There is a growing corpus of written documents in the language.
-% \item There are users who consistently use the language digitally.
-% \item There is a formalised spelling system.
-% \item There is a Bible translation. %Write about Wycliffe and SIL
-% \item There are non-electronic documents.
-% \item There is a dictionary.
-% \item There is a machine-readable corpus.
-% \item It is used on modern social media; Twitter, and so on.
-% \item There is a Wikipedia entry.
-% \item There are spellcheckers.
-% \item There are syntactic tools.
-% \item There are machine learning algorithms based on the language.
-% \item There are speech-to-text or text-to-speech systems developed for the language.
-% \end{itemize}
-%
-% To get a better idea of hose these metrics can be implemented, we can look at several different languages and how they use code to further language development.
-
-% A language's digital presence is defined by: its ability to have tools which are easily accessible to users of the language, applications build on top of that tooling, large amounts of mono- and bilingual corpora, and an active amount of speakers (generally, in the millions). Generally, this also needs official backing in the form of an official status for a language, set at a national level. For instance, English is considered the \textit{de facto} national language of United States, and the overwhelming majority of language users and computational software developed in the States is in English. In Europe, the EU mandates that citizens have the right to correspond with an EU institution (and receive a response back) in any of the 24 recognised official languages of the respective member states.\footnote{\href{https://europa.eu/european-union/topics/multilingualism\_en}{https://europa.eu/european-union/topics/multilingualism\_en}} This includes relatively small languages, such as Maltese, which has a significant web presence and tooling considering there are only just under half a million speakers. \footnote{\href{https://www.ethnologue.com/language/mlt}{https://www.ethnologue.com/language/mlt}} China is estimated to have more users of the internet than Japan, India, and the United States combined.\footnote{\href{http://chinapower.csis.org/web-connectedness/}{http://chinapower.csis.org/web-connectedness/}} But while the majority of these users will be speakers of Standard Mandarin, and not English; the operating systems and infrastructural backbone will still depend upon English-language originating software (although the user interface will be in Chinese).
-%
-% Neither official status nor population size necessarily means that a language will have resources or a digital presence, however. Romansh, although it is an official, provincial language of Switzerland, does not enjoy the same privileges as French or German, as there are only 40,000 speakers.\footnote{\href{https://www.ethnologue.com/language/roh}{https://www.ethnologue.com/language/roh}} Min Dong, although it has over nine million speakers \footnote{\href{https://www.ethnologue.com/language/cdo}{https://www.ethnologue.com/language/cdo}}, does not afford the same privileges as Mandarin, as it is not the official language of China. It is also not true that a language needs to have a large government presence or access to military-grade technology to have digital resources - a notable example would be Haitian Creole, spoken by over ten million speakers in one of the world's poorest countries. After the 2010 earthquake, Google, Microsoft, and Carnegie Mellon collaborated to make a machine translation system, an overwhelmingly difficult achievement.\cite{Lewis:2011:CMD:2132960.2133030}
-
-
 
 \subsection{The current state of language diversity}
 
@@ -285,6 +317,10 @@ Here, I will explain briefly who makes language resources for these languages. I
 
 % Also include ELDA http://www.elda.org/en/catalogues/language-resources-announcements/
 %% The European Language Resources Association (ELRA) is a non-profit making organisation founded by the European Commission in 1995, with the mission of providing a clearing house for language resources and promoting Human Language Technologies (HLT).
+
+%  In addition, language documentation and description is an extremely decentralized activity, carried out by missionaries, anthropologists, travellers, naturalists, amateurs, colonial officials, ethnographers and not least linguists over several hundred years. In fact, there has never in history been a systematic survey of descriptive materials on the languages of the world (although, at least, Adelung [1820] and Schmidt [1926] were in a position to produce one at times when the task was much smaller). - Hammarstrong, yaj_mling 2015
+
+% Were it not for the special attention DARPA, one of the main sponsors of machine translation, devoted to Haitian Creole, it is dubious we would have any MT aimed at this language. There is no reason whatsoever to suppose the Haitian government would have, or even could have, sponsored a similar effort [32] \citep[9]{kornai2013digital}
 
 \subsection{Language research funding}
 
