--- a/5-case-studies.tex
+++ b/5-case-studies.tex
@@ -58,3 +58,8 @@ There is a potentially large corpus of spoken language in Naskapi from the local
 All told, computational work is exceedingly limited. There are some websites in Naskapi, which could be used to make a small corpus, but there are no currently active projects working on collecting corpora for the purpose of linguistic study, and neither is there an active academic community working on Naskapi outside of the SIL translators, who may occasionally publish a paper (or, of course, a dictionary or physical book).
 
 While FLEx is open source, none of the linguists edit the code for it or use the codebase, depending on SIL International to keep the product up to date. Keyman is likewise not edited, although it is installed on local computers. There have been at least one Naskapi speaker who found and used a syllabic keyboard, but there has been no effort to standardise the syllabics in the schools or with other speakers, and the relevant code has not been shared in any official capacity by any party in the language community.
+
+
+% TODO Add in Kornai's notes about Cree in kornai2013digital here
+% TODO Add jancewicz2002applied and look at all papers which cite it
+% TODO Mention http://www.language-archives.org/language/nsk
