--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,42 @@
  year={2014}
 }
 
+@article{lewis2010developing,
+  title={Developing ODIN: A multilingual repository of annotated language data for hundreds of the world's languages},
+  author={Lewis, William D and Xia, Fei},
+  journal={Literary and Linguistic Computing},
+  volume={25},
+  number={3},
+  pages={303--319},
+  year={2010},
+  publisher={Oxford University Press}
+}
+
+@article{soria2017digital,
+  title={A Digital Language Vitality Scale and Indicators},
+  author={Soria, Claudia and Quochi, Valeria and Russo, Irene and Gurrutxaga, Antton and Ceberio, Klara},
+  year={2017}
+}
+
+@article{farrar2007gold,
+  title={The GOLD Community of Practice: An infrastructure for linguistic data on the Web},
+  author={Farrar, Scott and Lewis, William D},
+  journal={Language Resources and Evaluation},
+  volume={41},
+  number={1},
+  pages={45--60},
+  year={2007},
+  publisher={Springer}
+}
+
+@inproceedings{farrar2002common,
+  title={A common ontology for linguistic concepts},
+  author={Farrar, Scott and Lewis, William and Langendoen, Terence},
+  booktitle={Proceedings of the Knowledge Technologies Conference},
+  pages={10--13},
+  year={2002}
+}
+
 @article{bodo2017language,
   title={Language revitalization, modernity, and the {Cs{\'a}ng{\'o}} mode of speaking},
   author={Bod{\'o}, Csan{\'a}d and Fazakas, No{\'e}mi and Heltai, J{\'a}nos Imre},
@@ -23,6 +59,37 @@
   pages={327--341},
   year={2017},
   publisher={De Gruyter Open}
+}
+
+
+// Note: This is the reviw of ginsburgh2011many
+@article{doi:10.1080/10848770.2013.804729,
+author = { Anthony   Pym },
+title = {How Many Languages Do We Need? The Economics of Linguistic Diversity},
+journal = {The European Legacy},
+volume = {18},
+number = {5},
+pages = {672-673},
+year  = {2013},
+publisher = {Routledge},
+doi = {10.1080/10848770.2013.804729},
+URL = {https://doi.org/10.1080/10848770.2013.804729},
+eprint = {https://doi.org/10.1080/10848770.2013.804729}
+}
+
+@article{gibson2016assessing,
+  title={Assessing digital vitality: analytical and activist approaches},
+  author={Gibson, Maik},
+  journal={CCURL 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity},
+  pages={46},
+  year={2016}
+}
+
+@book{ginsburgh2011many,
+  title={How many languages do we need?: The economics of linguistic diversity},
+  author={Ginsburgh, Victor and Weber, Shiomo},
+  year={2011},
+  publisher={Princeton University Press}
 }
 
 @inproceedings{resnik1999mining,
@@ -370,6 +437,14 @@
   publisher={Cambridge University Press}
 }
 
+@article{darwish2013arabizi,
+  title={Arabizi detection and conversion to Arabic},
+  author={Darwish, Kareem},
+  journal={arXiv preprint arXiv:1306.6755},
+  year={2013}
+}
+
+
 @book{quilter2002narrative,
   title={Narrative threads: Accounting and recounting in {Andean} khipu},
   author={Quilter, Jeffrey and Urton, Gary},
@@ -591,6 +666,31 @@
   year      = {2013}
 }
 
+@misc{ager2008omniglot,
+  title={Omniglot writing systems and languages of the world},
+  author={Ager, Simon},
+  url={http://omniglot.com},
+  note={[Online; accessed April 17, 2018]},
+  year={2018}
+}
+
+
+@misc{wiki:Wikipedia,
+  author = "{Wikipedia contributors}",
+  title = "Wikipedia --- {W}ikipedia{,} The Free Encyclopedia",
+  year = "2018",
+  url = "https://en.wikipedia.org/wiki/Wikipedia",
+  note = "[Online; accessed April 17 2018]"
+}
+
+
+@article{hammarstrom2015glottolog,
+  title={Glottolog 2.3},
+  author={Hammarstr{\"o}m, Harald and Forkel, Robert and Haspelmath, Martin and Bank, Sebastian},
+  journal={Leipzig: Max Planck Institute for Evolutionary Anthropology. Available online at http://glottolog. org},
+  year={2015}
+}
+
 @inbook{wals-141,
  author  = {Bernard Comrie},
  title   = {Writing Systems},
@@ -599,6 +699,24 @@
  url    = {http://wals.info/chapter/141},
  year   = {2013},
  book   = "wals"
+}
+
+@article{simons2003open,
+  title={The Open Language Archives Community: An infrastructure for distributed archiving of language resources},
+  author={Simons, Gary and Bird, Steven},
+  journal={Literary and Linguistic Computing},
+  volume={18},
+  number={2},
+  pages={117--128},
+  year={2003},
+  publisher={Oxford University Press}
+}
+
+@article{jancewicz2002applied,
+  title={Applied computer technology in Cree and Naskapi language programs},
+  author={Jancewicz, Bill and MacKenzie, Marguerite},
+  year={2002},
+  publisher={University of Hawaii National Foreign Language Resource Center}
 }
 
 @article{kornai2013digital,
@@ -610,6 +728,14 @@
  pages={e77056},
  year={2013},
  publisher={Public Library of Science}
+}
+
+@article{kornai2015new,
+  title={A New Method of Language Vitality Assessment},
+  author={Kornai, Andras},
+  journal={Linguistic and Cultural Diversity in Cyberspace},
+  pages={132},
+  year={2015}
 }
 
 @inproceedings{zagalsky2015,
